WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23561
Chromium does not generate a file name when dragging images to the desktop
https://bugs.webkit.org/show_bug.cgi?id=23561
Summary
Chromium does not generate a file name when dragging images to the desktop
Paul Godavari
Reported
2009-01-26 17:18:56 PST
When dragging an image from a web page to the desktop where the image has no ALT text, the file name is empty or contains only an extension (eg ".jpg"). WebCore/platform/ChromiumClipboard.cpp needs to send more information to Chromium in order to properly name the dragged image file.
Attachments
Patch for bug 23561
(3.04 KB, patch)
2009-01-26 17:23 PST
,
Paul Godavari
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Paul Godavari
Comment 1
2009-01-26 17:23:58 PST
Created
attachment 27056
[details]
Patch for
bug 23561
Eric Seidel (no email)
Comment 2
2009-01-26 17:37:39 PST
Comment on
attachment 27056
[details]
Patch for
bug 23561
Patch looks fine. I assume you meant to mark it for review. There seem to be tabs in the changelog which will need to be fixed when landing.
Dimitri Glazkov (Google)
Comment 3
2009-01-27 09:31:22 PST
Committed in
http://trac.webkit.org/changeset/40294
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug