2009-01-27  Paul Godavari  <paul@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23561
        Explicitly send the MIME type from an image dragged from a web
        page to the desktop, to Chromium so that it can properly generate
        a file name.

        * platform/chromium/ChromiumDataObject.cpp:
        (WebCore::ChromiumDataObject::clear):
        (WebCore::ChromiumDataObject::hasData):
        * platform/chromium/ChromiumDataObject.h:
        * platform/chromium/ClipboardChromium.cpp:
        (WebCore::writeImageToDataObject):

Canonical link: https://commits.webkit.org/32482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40294 268f45cc-cd09-0410-ab3c-d52691b4dbfc